# LANLink-Api

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2024-10-12-110218_create_equipment/: down.sql  up.sql
migrations/2024-10-14-201827_create_users_table/: up.sql
migrations/2024-10-15-181243_create_auth_users_table/: down.sql  up.sql
migrations/2024-10-17-165916_add_permission_bitwise_to_auth_use/: down.sql  up.sql
migrations/2024-10-19-085059_create_game_servers_table/: down.sql  up.sql
src/: User.rs  good_bye.rs  hello_world.rs  main.rs  schema.rs
src/controllers/: equipment_controller.rs  greeting_controller.rs  mod.rs  user_controller.rs
src/core/: mod.rs
src/core/crypto/: crypto_manager.rs  mod.rs
src/core/db_connection/: db_connection.rs
src/core/errors/: error.rs  error_handler.rs  mod.rs  user_errors.rs
src/core/permissions/: mod.rs  permission_manager.rs
src/core/permissions/permission_constants/: equipment_permissions.rs  user_permissions.rs
src/features/: mod.rs
src/features/admin/controllers/: admin_permission_controller.rs  mod.rs
src/features/auth/: auth.rs  auth_body.rs  auth_controller.rs  auth_errors.rs  auth_user.rs  auth_user_bak.rs  claims.rs  mod.rs
src/features/auth/controllers/: auth_controller.rs  mod.rs  sign_up_controller.rs
src/features/auth/dtos/: auth_body_dto.rs  mod.rs
src/features/auth/key_creation_and_retrieval/: claims.rs  keys.rs  mod.rs  permission_manager.rs
src/features/auth/models/: auth_user_model.rs  mod.rs
src/features/auth/repos/: auth_repo.rs
src/features/debug/controllers/: debug_controller.rs  mod.rs  protected_controller.rs
src/features/equipment/: mod.rs
src/features/equipment/controllers/: equipment_controller.rs  mod.rs
src/features/equipment/dto/: equipment_dto.rs  mod.rs
src/features/equipment/mapper/: equipment_mapper.rs  mod.rs
src/features/equipment/models/: equipment_model.rs  mod.rs
src/features/equipment/repos/: equipment_repo.rs  mod.rs
src/features/game_server/: mod.rs
src/features/game_server/controllers/: game_server_controller.rs  mod.rs
src/features/game_server/dtos/: game_server_dto.rs  mod.rs
src/features/game_server/models/: game_server_model.rs  mod.rs
src/features/greeting/: greeting_controller.rs  mod.rs  user_controller.rs
src/features/protected/: mod.rs  protected_controller.rs
src/features/user/: mod.rs
src/objects/: equipment.rs  file_manager.rs  mod.rs  user.rs
userdata/accounts/: CocoPopEater.json
(+15 files in other folders)
