[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
## API FRAMEWORK
axum = { version = "0.7.7", features = ["macros"] }
listenfd = "1.0.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio =  { version = "1.40.0",  features = ["rt", "rt-multi-thread", "macros"] }
axum-login = { version = "0.16.0" }
axum-messages = "0.7.0"

## DATABASE ORM
diesel = { version = "2.2.4", features = ["postgres", "uuid"] }

## MISC
argon2 = "0.5.3"
dotenvy = "0.15"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
askama = "0.12.1"
async-trait = "0.1.83"
thiserror = "1.0.64"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
chrono = { version = "0.4.34", features = ["serde", "clock"] }
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
serde_json = "1.0.113"
rand = "0.8.5"
